<resources>
    <string name="app_name">WRL</string>

    <string name="emailEdit">Email</string>
    <string name="passwordEdit">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUp">Create Account</string>
    <string name="loginText">Login</string>
    <string name="signOutText">Sign Out</string>
    <string name="SignUPText">Sign Up</string>
    <string name="nameEdit">Name</string>
    <string name="confirmPasswordEdit">Confirm Password</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="resetPasswordText">To reset password, enter your email, press the button and check your email for further instructions</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="returnToLoginTextView">Return to Login Screen</string>
    <string name="title_activity_nav_main">NavMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
