<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_color_selector"
    tools:context="com.example.jonathanmoreno.workrelatedlearning.SignupActivity">


    <android.support.v7.widget.CardView
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signupTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/signUp"
                android:textSize="30sp"
                android:textStyle="italic"
                android:typeface="monospace" />
            <EditText
                android:id="@+id/name"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/nameEdit"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/emailEdit"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="Phonenumber"
                android:inputType="number" />

            <EditText
                android:id="@+id/program"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="Program"
                android:inputType="text" />


            <EditText
                android:id="@+id/password"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:hint="@string/passwordEdit"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/confirmPasswordEdit"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimaryDark"
                android:elevation="5dp"
                android:text="@string/SignUPText"
                android:textColor="@android:color/white"
                 />






            <TextView
                android:id="@+id/loginReturnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/returnToLoginTextView" />
        </LinearLayout>

    </android.support.v7.widget.CardView>







</RelativeLayout>
